[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
aes = "0.8"
anyhow = "1.0"
ascii = "1.1"
base64 = "0.22"
common = { path = "crates/common" }
ecb = "0.1"
hex = "0.4"
openssl = "0.10"
percent-encoding = "2.3"
rand = "0.8"
thiserror = "1.0"
utf8_reader = { git = "https://github.com/BSFishy/lexer.git" }
