[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes.workspace = true
base64.workspace = true
ecb.workspace = true
hex.workspace = true
openssl.workspace = true
rand.workspace = true
thiserror.workspace = true
utf8_reader.workspace = true
